# DetectorGADAST

./: Dockerfile  README.md  install.sh  run.sh
LCSim/: CMakeLists.txt  lcsim.cc  vis.mac
LCSim/include/: .LcVars.hh.swp  LcAPDHit.hh  LcAPDSD.hh  LcCsIHit.hh  LcCsISD.hh  LcDetectorConstruction.hh  LcEvent.hh  LcEventAction.hh  LcPMTHit.hh  LcPMTSD.hh  LcPhotonCounterSD.hh  LcPhysicsList.hh  LcPhysicsListMessenger.hh  LcPrimaryGeneratorAction.hh  LcPrimaryGeneratorMessenger.hh  LcRunAction.hh  LcStackingAction.hh  LcSteppingAction.hh  LcSteppingVerbose.hh  LcTrajectory.hh  LcTreeHandler.hh  LcUserEventInformation.hh  LcUserTrace.hh  LcUserTraceCollection.hh  LcUserTrackInformation.hh  LcVars.hh  checkArgs.hh  readLambda.hh
LCSim/src/: LcAPDHit.cc  LcAPDSD.cc  LcCsIHit.cc  LcCsISD.cc  LcDetectorConstruction.cc  LcDetectorConstruction.cc.original  LcEventAction.cc  LcPMTHit.cc  LcPMTSD.cc  LcPhotonCounterSD.cc  LcPhysicsList.cc  LcPhysicsListMessenger.cc  LcPrimaryGeneratorAction.cc  LcPrimaryGeneratorMessenger.cc  LcRunAction.cc  LcStackingAction.cc  LcSteppingAction.cc  LcSteppingVerbose.cc  LcTrajectory.cc  LcTreeHandler.cc  LcUserEventInformation.cc  LcUserTrace.cc  LcUserTraceCollection.cc  LcUserTrackInformation.cc  checkArgs.cc  readLambda.cc
